fix Mayan glyphs on mobile #32

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,9 @@
     margin-right: -50px;
   }
 }
+
+.noto-sans-mayan-numerals-regular {
+  font-family: "Noto Sans Mayan Numerals", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
